syntax = "proto3";

package server;

message SessionToken {
  int32 user_id = 1;
}

